blockml/test/errors/05_join/e123/e123_one.view
view: e123_one
table: 1
fields:
- dimension: dim1
  sql: 111
